Add new endpoint crud Customer